--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -327,6 +327,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   text-align: center;
   padding: 60px 50px;
   margin-top: -60px;
+  box-shadow:  5px 5px #4A2FBD;
 }
 .skill h2 {
 	font-size: 45px;
@@ -344,6 +345,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   margin: 0 auto;
   position: relative;
 }
+
 .skill-slider .item img {
   width: 50%;
   margin: 0 auto 15px auto;
