adding some animation

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -151,17 +151,21 @@ span.navbar-text {
     transform: scale(0);
 	transition: 0.3s ease-in-out;
 }
+
 .social-icon a:hover::before {
     transform: scale(1);
 }
+
 .social-icon a img {
 	width: 40%;
 	z-index: 1;
 	transition: 0.3s ease-in-out;
 }
+
 .social-icon a:hover img {
 	filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(98%) hue-rotate(346deg) brightness(95%) contrast(86%);
 }
+
 .navbar-text button {
   font-weight: 700;
   color: #fff;
@@ -489,14 +493,17 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
   padding: 60px 0 200px 0;
 }
+
 .contact img {
   width: 92%;
 }
+
 .contact h2 {
 	font-size: 45px;
 	font-weight: 700;
   margin-bottom: 30px;
 }
+
 .contact form input, .contact form textarea {
   width: 100%;
   background: rgba(255, 255, 255, 0.1);
@@ -558,12 +565,18 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /************ Footer Css ************/
 .footer {
-  padding: 0 0 50px 0;
+  padding: 40px 0 50px 0;
   background-image: url('/assets/img/footer-bg.png');
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
+
 }
+
+.footer > .logo{
+  color: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+}
+
 .newsletter-bx {
   background: #FFFFFF;
   border-radius: 55px;
